manifest/base/bhasai/inboundjs/deployment-inboundjs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:

  labels:
    app.kubernetes.io/name: inboundjs
  name: inboundjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: inboundjs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: inboundjs
    spec:
      containers:
        - envFrom:
          - secretRef:
              name: inboundjs
          image:  ghcr.io/bharatsahaiyak/inbound-js:scaling
          imagePullPolicy: Always
          name: inboundjs
          resources:
            requests:
              memory: "2Gi"
              cpu: "2"
            # limits:
            #   memory: "2Gi"
            #   cpu: "1"

      restartPolicy: Always
