manifest/base/bhasai/inboundjs/service-inboundjs.yaml
apiVersion: v1
kind: Service
metadata:
  name: inboundjs
spec:
  selector:
    app.kubernetes.io/name: inboundjs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
