manifest/base/bhasai/inboundjs/ingress-inboundjs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inboundjs 
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: "inboundjs.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: inboundjs
            port:
              number: 80
